[package]
name = "predictions-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1" }
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"]}
tower-http = { version = "0.6.2", features = ["trace"] }
dotenv = "0.15"
chrono = { version = "0.4.40", features = ["serde"] }
headers = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
reqwest = { version = "0.12.12", features = ["json"] }
regex = "1.11.1"
anyhow = "1.0.97"
async-trait = "0.1.87"
oauth2 = "4.4.2"
base64 = "0.22.1"
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4"] }
solana-sdk = "2.2.2"
solana-program = "2.2.1"
solana-client = "2.2.7"
bincode = "1.3.3"
bs58 = "0.5.1"